--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -3,27 +3,17 @@
 @tailwind utilities;
 
 :root {
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
+  --title: #191927;
+  --lightgreen: #00bf63;
+  --orange: #ff914d;
+  --blue: #004aad;
+  --lightgrey: #f3f3f3;
 }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
-  }
-}
 
 body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+  color: var(--title);
+  background: var(--lightgrey);
 }
 
 @layer utilities {
