adjust login form and add stronger orange color for hover

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -6,6 +6,7 @@
   --title: #191927;
   --lightgreen: #00bf63;
   --orange: #ff914d;
+  --orange-600: #f97316;
   --blue: #004aad;
   --lightgrey: #f3f3f3;
   --darkblue: #153259;
