improve dashboard layout and styles

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -10,6 +10,7 @@
   --blue: #004aad;
   --lightgrey: #f3f3f3;
   --darkblue: #153259;
+  --tertiary: var(--orange);
 }
 
 body {
@@ -75,4 +76,8 @@ body {
 
 * {
   border-color: hsl(var(--border));
+}
+
+h1, h2, h3, h4, h5, h6, p, span {
+  cursor: default;
 }
